Changed title of My Files panel to simply My Files; no longer using col-md class because of disappearing issues on resize - instead setting max height and width of panel - centering via table and table-cell; still need to add footer to panels for buttons; still need to set overflow scroll for my files panel

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,9 +18,9 @@
  *= require_self
  */
 
-body {
+/*body {
   padding-top: 50px;
-}
+}*/
 
 /*.alert-dismissible{
  position: absolute;
@@ -69,20 +69,21 @@ body {
   top: 50px;
   bottom: 0;
 }
-/*.containerr-to-center{
+
+.table-for-centering{
     display: table;
     width: 100%;
     height: 100%;
     background: #3104B4;
 }
-*/
-.center-on-screen {
+
+.cell-for-centering {
   float: none;
   padding: auto;
   display: table-cell;
   text-align: center;
   vertical-align: middle !important;
-}
+} 
 
 /*.pad-for-panel{
   
@@ -93,16 +94,15 @@ body {
 }*/
 
 .my-panel {
+  max-height: 500px;
+  max-width: 600px;
   box-shadow: 2px 2px 6px #555555;
   display: inline-block;
   vertical-align: middle !important;
   float: none;
+  backround-color
 }
-  /*position:absolute;
-  z-index:15;
-  top:45%;
-  left:42%;*/
-}
+
 
 .vcenter {
     display: inline-block !important;
@@ -120,7 +120,8 @@ body {
 
 .panel-title-custom{
   font-family: 'Open Sans', sans-serif;
-  font-size: 15px
+  font-size: 15px;
+  text-align: center;
 }
 
 .button-centered {
