--- a/app/assets/stylesheets/note_files.scss
+++ b/app/assets/stylesheets/note_files.scss
@@ -6,28 +6,28 @@
     -webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
     column-count: 3;
-        -webkit-column-gap: 10px;
-       -moz-column-gap: 10px;
-            column-gap: 10px;
+
 }
 
-.newspaper p {
+.newspaper div {
 /*  padding-bottom: 2px;
   margin-left: 2px;
   margin-right: 2px;*/
+  width: 100%;
   word-break: break-all; 
-  margin: 4px;
+  margin-left: 4px;
+  margin-right: 4px;
   padding-left: 6px;
   padding-right: 6px;
   
   font-size:24px;
 }
 
-.p-even{
+.file-even{
   background-color: #A7C0EC;
 }
 
-.p-odd{
+.file-odd{
   background-color: #D3E3F7;
 }
 
